--- a/V49/latex-template/content/auswertung.tex
+++ b/V49/latex-template/content/auswertung.tex
@@ -36,7 +36,7 @@ induzierten Spannung für verschiedene Pulsabstände $\tau$ gemessen. Die Messwe
   \sisetup{table-format=2.1}
   \begin{tabular}{c c c c}
   \toprule
-  $\tau \,/\, \si{\milli\second}$ & $U \,/\, \si{\volt}$ & $\tau \,/\, \si{\volt}$
+  $\tau \,/\, \si{\milli\second}$ & $U \,/\, \si{\volt}$ & $\tau \,/\, \si{\milli\second}$
   & $U \,/\, \si{\volt}$\\
   \midrule 
         1,0 & -1,8813 &  155,6 & -1,3188\\
@@ -101,7 +101,7 @@ Mithilfe der Funktion \textit{scipy.signal.find\_peaks}\cite{scipy}
 werden die Peaks mit positiver Spannungsamplitude $U$ aus dem Signal herausgefiltert. Die Bestimmung der Peaks erfolgt 
 dabei über die CSV-Datei des Signals. Hierbei ist zu erwähnen, dass weniger als die erwarteten $100$ Peaks extrahiert werden 
 konnten.
-Die so erhaltenen Messwerte sind in Tabelle \ref{tab:mess2} aufgeführt und in Abbildung \ref{fig:plot2.py} 
+Die so erhaltenen Messwerte sind in Tabelle \ref{tab:mess2} aufgeführt und in Abbildung \ref{fig:plot2} 
 graphisch dargestellt. 
 
 \begin{table}
