--- a/V44/latex-template/content/diskussion.tex
+++ b/V44/latex-template/content/diskussion.tex
@@ -4,7 +4,7 @@
 Zuerst lässt sich feststellen, dass die Theoriekurven des Wafers beide Kiessig-Oszillationen im Verlauf aufzeigen.
 Sie gleichen sich im Verlauf stark, spalten sich jedoch für einen größer werdenden Wellenvektorübertrag $q$.
 Die Reflektivität des Wafers mit theoretisch glatten Oberflächen ist dabei größer als mit relastisch rauen 
-Oberflächen. Außerdem liegen beide Theoriekurven signifikant unter der Fresnelreflektivität einer 
+Oberflächen. Erstere Theoriekurven verläuft nahe der Fresnelreflektivität einer 
 einzelnen Siliziumoberfläche.
 Diese Zusammenhänge sind physikalisch logisch. Glatte Oberflechen reflektieren besser als raue.
 Für die nach verschiedenen Methoden bestimmten Geometriewinkel
