--- a/V44/latex-template/content/theorie.tex
+++ b/V44/latex-template/content/theorie.tex
@@ -45,7 +45,7 @@ Dabei ist hier eine Unterscheidung zwischen $p$- und $s$-Polarisation nicht notw
 Die Fresnelreflektivität für Röntgenstrahlung ist für $\alpha_i > 3\alpha_\text{C}$ nährungsweise gegeben als
 
 \begin{equation*}
-    R_\text{f} = \frac{a_\text{C}}{2\alpha_i}.
+    R_\text{F} = |r^2| = \left(\frac{a_\text{C}}{2\alpha_i}\right)^4.
 \end{equation*}
 
 \subsection{Mehrschichtsysteme}
