--- a/V14/latex-template/content/auswertung.tex
+++ b/V14/latex-template/content/auswertung.tex
@@ -2,7 +2,7 @@
 \label{sec:Auswertung}
 
 Als erster Schritt wird die am Szintillationsdetektor ankommende Strahlung ohne ein Objekt im Strahlengang gemessen. \\
-Zu sehen ist das nach Abbildung ... erwartete Spektrum. Dieses lässt sich in zwei charakteristische Bereiche teilen: Das 
+Zu sehen ist das nach Abbildung \ref{fig:würfel} erwartete Spektrum. Dieses lässt sich in zwei charakteristische Bereiche teilen: Das 
 Compton-Kontinuum und der Photopeak. Im Compton Kontinuum lässt sich schwach ein Peak feststellen, der von der Rückstrahlung 
 stammt. Die Compton-Kante ist klar zu sehen und tritt bei Energien von etwa $\SI{480}{\kilo\electronvolt}$ auf.\\
 Es wurde hier und in allen folgenden Versuchsteilen eine Zeit von $\symup{\Delta}t = \SI{300}{\second}$ gemessen. Die Counts 
@@ -58,7 +58,7 @@ sich die Zählraten zu:
 
 \subsection{Bestimmung des Materials eines homogenen Würfels}
 
-Die untersuchten Projektionen sind gemäß Abbildung ... $I_5$, $I_6$, $I_7$ und $I_8$. Die gemessenen Werte sind in 
+Die untersuchten Projektionen sind gemäß Abbildung \ref{fig:würfel} $I_5$, $I_6$, $I_7$ und $I_8$. Die gemessenen Werte sind in 
 Tabelle \ref{tab:mess2} aufgeführt. 
 
 \begin{table}[H]
@@ -175,6 +175,7 @@ sind in Tabelle \ref{tab:mess6} aufgeführt.
 
 \begin{table}[H]
   \centering
+  \small
   \caption{Messwerte für den Würfel vier.}
   \label{tab:mess6}
   \sisetup{table-format=2.1}
