--- a/V14/latex-template/content/diskussion.tex
+++ b/V14/latex-template/content/diskussion.tex
@@ -3,6 +3,7 @@
 
 Die gemessenen Zählraten für die Nullmessung mit einem Aluminiummantel ergeben sich zu 
 
+\vspace{-25pt}
 \begin{align*}
     I_{0,5} &= \SI{22.2+-0.3}{\per\second},\\ 
     I_{0,2} &= \SI{21.7+-0.3}{\per\second},\\ 
@@ -15,6 +16,7 @@ Die Nullmessung scheint demnach gut funktioniert zu haben.\\
 
 Für den Absorptionskoeffizient des ersten homogenen Würfeld ergibt sich unter Verwendung der Werte der Nullmessung 
 
+\vspace{-5pt}
 \begin{equation*}
     \bar{\mu_2} = \SI{0.564+-0.044}{\per\centi\metre}. 
 \end{equation*}
@@ -23,6 +25,7 @@ Der Würfel wird mit einer Abweichung von $\SI{0.9}{\percent}$ Eisen zugeordnet.
 
 Für den Absorptionskoeffizient des zweiten homogenen Würfeld ergibt sich unter Verwendung der Werte der Nullmessung 
 
+\vspace{-5pt}
 \begin{equation*}
     \bar{\mu_3} = \SI{0.105+-0.006}{\per\centi\metre}. 
 \end{equation*}
