--- a/V14/latex-template/lit.bib
+++ b/V14/latex-template/lit.bib
@@ -5,7 +5,16 @@
 }
 
 @manual{lit,
-  author = {Literaturwerte},
   date = {03.02.2021},
   url = {https://physics.net.gov/PhysRefData/Xcom/html/xcom1.html}
+}
+
+@manual{alt,
+  author = {TU Dortmund},
+  title = {Versuch V14: Tomographie mit Gamma­Strahlung},
+}
+
+@manual{leifi,
+  date = {04.02.2021},
+  url = {https://www.leifiphysik.de/kern-teilchenphysik/radioaktivitaet-fortfuehrung/versuche/gammaspektrum-von-cs-137}
 }
