--- a/V14/latex-template/content/auswertung.tex
+++ b/V14/latex-template/content/auswertung.tex
@@ -5,13 +5,15 @@ Als erster Schritt wird die am Szintillationsdetektor ankommende Strahlung ohne 
 Zu sehen ist das nach Abbildung \ref{fig:würfel} erwartete Spektrum. Dieses lässt sich in zwei charakteristische Bereiche teilen: Das 
 Compton-Kontinuum und der Photopeak. Im Compton Kontinuum lässt sich schwach ein Peak feststellen, der von der Rückstrahlung 
 stammt. Die Compton-Kante ist klar zu sehen und tritt bei Energien von etwa $\SI{480}{\kilo\electronvolt}$ auf.\\
-Es wurde hier und in allen folgenden Versuchsteilen eine Zeit von $\symup{\Delta}t = \SI{300}{\second}$ gemessen. Die Counts 
+Es wurde hier und in allen folgenden Versuchsteilen eine Zeit von $\symup{\Delta}t = \SI{300}{\second}$ gemessen, um die 
+statistischen Unsicherheiten bei $< \SI{3}{\percent}$ zu halten. Die Counts 
 ergeben sich dabei zu
 
 \begin{equation*}
   C = 6743 \pm 82.
 \end{equation*}
 
+Diese bezeichnen, die durch den Szintillationsdetektor ausgelösten Pulse. 
 Mit diesen Messwerten ergibt sich die Eingangsintensität gemäß 
 
 \begin{equation}
@@ -166,7 +168,7 @@ Durch Bildung des Mittelwertes ergibt sich der Absorptionskoeffizient zu
 \end{equation*}
 
 Bei einem Vergleich mit den Literaturwerten ergibt sich, dass der Würfel mit einer Abweichung von 
-$\SI{9.5}{\percent}$ aus CH20 zu bestehen scheint. 
+$\SI{9.5}{\percent}$ aus CH20 also Delrin zu bestehen scheint. 
 
 \subsection{Bestimmung der Materialien in einem zusammengesetzten Würfel}
 
@@ -244,7 +246,7 @@ Zum Vergleich werden Literaturwerte benötigt, die sich in Tabelle \ref{tab:lit}
   \sisetup{table-format=2.1}
   \begin{tabular}{c c}
   \toprule
-  $\text{Material}$ & $\mu$\\
+  $\text{Material}$ & $\mu \;/\; \si{\per\centi\metre}$\\
   \midrule
       Al & 0,201\\
       Pb & 1,175\\
@@ -267,12 +269,12 @@ Damit können die Materialien der einzelnen Würfel in Tabelle \ref{tab:mat} bes
   $\text{Würfel}$ & $\text{Material}$ & $\text{Prozentuale Abweichung}$\\
   \midrule
     1 & Fe & 1,1\\
-    2 & Al & 11,4\\
+    2 & CH20 & 53,5\\
     3 & Fe & 33\\
-    4 & Al & 67,7\\
+    4 & CH20 & 190,5\\
     5 & Fe & 15,5\\
-    6 & Al & 5,5\\
-    7 & Al & 13,4\\
+    6 & CH20 & 71,5\\
+    7 & CH20 & 50\\
     8 & Fe & 34,5 \\
     9 & Fe & 1,2\\
   \bottomrule
