--- a/V14/latex-template/content/diskussion.tex
+++ b/V14/latex-template/content/diskussion.tex
@@ -10,7 +10,8 @@ Die gemessenen Zählraten für die Nullmessung mit einem Aluminiummantel ergeben
     I_{0,8} &= \SI{21.3+-0.3}{\per\second}.   
 \end{align*}
 
-Es ist ein sehr kleiner Unterschied zwischen den Nullmessungen zu erkennen. Es sind kleine Unterschiede zu erwarten. Vor allem 
+Es ist ein sehr kleiner Unterschied zwischen den Nullmessungen im Rahmen der statistischen Unsicherheiten zu erkennen. 
+Es sind kleine Unterschiede beispielsweise durch Justierungsfehler zu erwarten. Vor allem 
 die Werte für $I_{0,2}$ und $I_{0,8}$ liegen sehr nahe beieinander, was zu erwarten ist, weil beide die Diagonalen der Würfel kennzeichnen. 
 Die Nullmessung scheint demnach gut funktioniert zu haben.\\
 
@@ -35,7 +36,7 @@ Der Würfel wird mit einer Abweichung von $\SI{9.5}{\percent}$ CH20 zugeordnet.\
 Im letzten Versuchsteil wird ein Würfel untersucht, der aus verschiedenen Materialien zusammengesetzt ist. Die Zuordnung 
 dieser Materialien findet sich in Tabelle \ref{tab:mat}. Es kann allerdings keine Aussage darüber getroffen werden, ob diese
 Zuordnungen tatsächlich stimmen. Teilweise gibt es große Abweichungen, die durch verschiedene Faktoren erklärt werden können. 
-Zum einen hat der Strahl eine endliche Ausdehnung, wodurch bei einem diagonalen Durchgang nicht verhindert werden kann, dass 
+Zum einen hat der Strahl eine Kollimation, wodurch bei einem diagonalen Durchgang nicht verhindert werden kann, dass 
 der Strahl auch falsche Elementarwürfel durchläuft. Außerdem kann es zu Ungenauigkeiten der Justierung kommen, oder es können
 sich Messungenauigkeiten in der Messung der Zeitintervalle finden. 
 
