--- a/V14/latex-template/content/durchfuehrung.tex
+++ b/V14/latex-template/content/durchfuehrung.tex
@@ -7,24 +7,15 @@ dient als Halterung und Fokussierung der $\ce{^{137}Cs}$-Strahlenquelle.\\
 
 Es wird ein Szintillationsdetektor verwendet. In diesem befindet sich ein Szintillationsmaterial, welches
 durch die einfallende Gammastrahlung angeregt wird und Licht in Form von Fluoreszens emittiert.
-Dieses Fluoreszenslicht hat eine geeignete Wellenlänge, um über den Photoeffekt Elektronen aus 
-der Messelektrode zu lösen. \\
+Dieses Fluoreszenslicht hat eine geeignete Wellenlänge, um über den Photoeffekt Elektronen
+im Detektor zu lösen, welche dann detektiert werden können. \\
 
 Im Photomultiplier lösen sie Elektronenkaskaden aus, welche proportional zur
 Eingangsenergie gemessen werden können. Das Signal muss eine Diskrimminatorschwelle übersteigen, durch welche
 der unerwünschte Hintergrund kosmischer- und Umgebungsstrahlung oder des thermischen Dunkelstroms herausgefiltert wird.
 Schließlich histogrammiert der Multichannelanalyzer das Signal nach seiner Stärke und ordnet es in Kanäle ein.
 
-\vspace{-5pt}
-\begin{figure}[H]
-    \centering
-    \includegraphics[scale=0.3]{content/aufbau.png}
-    \vspace{-10pt}
-    \vspace{3pt}
-    \caption{Versuchsaufbau der Messung \cite{alt}.}
-    \label{fig:aufbau}
-\end{figure}
-\vspace{-10pt}
+
 
 Zwischen Strahlenquelle und Detektor kann über eine Justiervorrichtung die Probe in den Strahlengang geschraubt 
 und ausgerichtet werden. Es liegen verschiedene 
@@ -41,7 +32,7 @@ dargestellten Schnittgeometrie gemessen.
 \vspace{-5pt}
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=1.2]{content/würfel.pdf}
+    \includegraphics[scale=1]{content/würfel.pdf}
     \vspace{-5pt}
     \caption{Die verschiedenen Schnittgeometrien der Tomographie.}
     \label{fig:würfel}
@@ -50,7 +41,7 @@ dargestellten Schnittgeometrie gemessen.
 
 \vspace{5pt}
 Diese lassen sich zusammenstellen zu der Matrix 
-\vspace{5pt}
+
 
 \begin{equation}
     A =
@@ -70,4 +61,3 @@ Diese lassen sich zusammenstellen zu der Matrix
     \end{pmatrix}
 \end{equation}
 
-\vspace{60pt}
