--- a/V27/latex-template/content/durchfuehrung.tex
+++ b/V27/latex-template/content/durchfuehrung.tex
@@ -40,12 +40,14 @@ ohne dass sie sich überlagen sollen, ist definiert als Dispersionsgebiet
 \vspace{-15pt}
 \begin{equation}
     \Delta \lambda_\text{D} = \frac{\lambda^2}{2d} \sqrt{\frac{1}{n^2-1}}\: .
+    \label{eqn:lam}
 \end{equation}
 
 Das Auflösungsvermögen der Platte lässt sich dann als
 
 \begin{equation}
     A = \frac{\lambda}{\Delta \lambda_\text{D}} = \frac{L}{\lambda} (n^2 -1)
+    \label{eqn:a}
 \end{equation}
 
 bestimmen, wobei $L$ die Plattenlänge angibt.
@@ -56,4 +58,65 @@ für die verschiedenen gefilterten Polarisationen aufgenommen. Damit ist auch
 eine Berechnung der Landé-Faktoren möglich.
 
 \section{Vorbereitungsaufgaben}
+
+\subsection{Dispersionsgebiet und Auflösungsvermögen der Lummer-Gehrcke-Platte}
+
+Nach den Gleichungen \eqref{eqn:lam} und \eqref{eqn:a} lassen sich mithilfe
+der Angaben $L = \SI{0.12}{\meter}$, $d = \SI{4}{\milli\meter}$, $n_\text{rot} = \num{1.4567}$
+$n_\text{blau} = \num{1.4635}$ die Dispersionsgebiete und Auflösungsvermögen der beiden 
+Spektrallinien berechnen zu
+
+\begin{align*}
+    \lambda_\text{rot} &= \SI{643.8}{\nano\meter}: & \Delta \lambda_\text{D,rot} &= \SI{48.91}{\pico\meter}\:, & A_\text{rot} &= \num{208749}\:, \\
+    \lambda_\text{blau} &= \SI{480}{\nano\meter}: & \Delta \lambda_\text{D,blau} &= \SI{27.0}{\pico\meter}\:, & A_\text{blau} &= \num{285458}\:. 
+\end{align*}
+
+\subsection{Termschemata zu den Spektrallinien}
+
+\begin{table}[H]
+    %\footnotesize
+    \centering
+    \caption{Quantenzahlen und Landé-Faktoren der Zustände.}
+    \vspace{-5pt}
+    \label{tab:exp_setup}
+    \begin{tabular}{c|ccc|c}
+        \hline 
+        Zustand & $L$ & $S$ & $J$ & $g_J$ \\
+        \hline
+        \hline
+        $^1P_1$ & $1$ & $0$ & $1$ & $1$ \\
+        $^1D_2$ & $2$ & $0$ & $2$ & $1$ \\
+        $^3S_1$ & $0$ & $1$ & $1$ & $2$ \\ 
+        $^3P_1$ & $1$ & $1$ & $1$ & $\sfrac{3}{2}$ \\
+        \hline 
+    \end{tabular}
+    \vspace{-10pt}
+\end{table}
+
+\begin{table}[H]
+    %\footnotesize
+    \centering
+    \caption{Quantenzahlen und Landé-Faktoren der Zustände.}
+    \vspace{-5pt}
+    \label{tab:exp_setup}
+    \begin{tabular}{c|ccc}
+        \hline 
+        Übergang & $\Delta m = -1$ & $\Delta m = 0$ & $\Delta m = 1$ \\
+        \hline
+        \hline
+        rot                 & $1$ & $0$ & $1$ \\
+        blau, $m_1 = +1$    & $2$ & $0$ & $1$ \\
+        blau, $m_1 = 0$     & $0$ & $1$ & $2$ \\ 
+        blau, $m_1 = -1$    & $1$ & $1$ & $\sfrac{3}{2}$ \\
+        \hline 
+    \end{tabular}
+    \vspace{-10pt}
+\end{table}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{content/Zeeman.pdf}
+    \caption{Die Termschemata der möglichen optischen Übergänge.}
+    \label{fig:term}
+\end{figure}
 
